--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <body>
         <div id="mainContainer">
             <p id="mainParagraph">Hi, I'm some text 
-                <span id="popupLocation">  
-                    with a cool popup</span> 
+                <span id="popupLocation">  with a cool popup</span> 
                     that displays when hovering some text.</p>
         </container>
 
